tests/negative/test_sym_owning_init_owning.orb
data Foo;

fnc dropFoo (val:Foo::noDrop) ();

data Foo {
    x:i32
}::((drop dropFoo));

fnc dropFoo (val:Foo::noDrop) () {};

fnc main () () {
    sym f0:Foo (f1 f0);
};